<resources>
    <string name="app_name">PDD</string>
    <string name="login_button">Login with Stepik</string>
    <string name="attempt_button">Solve</string>
    <string name="make_submission">Submit</string>
    <string name="menu">Menu</string>
    <string name="too_easy">EASY</string>
    <string name="too_hard">HARD</string>
    <string name="settings">Settings</string>
    <string name="stats">Stats</string>
    <string name="logout">Logout</string>
    <string name="correct">CORRECT</string>
    <string name="request_error">Something went wrong</string>
    <string name="wrong">WRONG</string>
    <string name="logout_dialog">Are you sure to continue?</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_title"><![CDATA[<b>Sign In</b> with e-mail]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_title"><![CDATA[<b>Sign Up</b> with e-mail]]></string>
    <string name="sign_later">Not now</string>
    <string name="continue_with">Or continue with</string>
    <string name="create_account">Create account</string>
    <string name="remind_password">Forgot password</string>
    <string name="name">Name</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="processing_your_request">Processing your request</string>
    <string name="loading_message">Please wait…</string>
    <string name="remind_password_success">We sent you a letter</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="next">Next</string>
    <string name="course_completed">Congratulations!\n\nYou have successfully completed the course!\n\n<a href="https://play.google.com/store/apps/details?id=org.stepic.droid">Find courses on Stepik</a></string>
    <string name="try_again">Try again</string>
    <string name="wrong_retry">Retry</string>
    <string name="required_field">Required field</string>
    <string name="terms_message_register"><![CDATA[By signing up, you agree to our <a href="https://stepik.org/page/terms/?from_mobile_app=true">Terms</a> and <a href="https://stepik.org/page/privacy/?from_mobile_app=true">Privacy Policy</a>]]></string>
    <string name="terms_message_login">By signing in, you agree to our <a href="https://stepik.org/page/terms/?from_mobile_app=true">Terms of Service</a> and <a href="https://stepik.org/page/privacy/?from_mobile_app=true">Privacy Policy</a></string>
    <string name="terms_message_launch"><a href="https://stepik.org/page/terms/?from_mobile_app=true">Terms of Service</a> and <a href="https://stepik.org/page/privacy/?from_mobile_app=true">Privacy Policy</a></string>
    <string name="register_error">Registration error</string>
    <string name="retry">Retry</string>
    <string name="facebook_app_id" translatable="false">100481807271297</string>
    <string name="onboarding_card_title_1">Welcome</string>
    <string name="onboarding_card_question_1"><![CDATA[
        <div class="center">
            <div class="padding-box">
                <img src="file:///android_asset/web/images/01.svg" />
            </div>
            <h3>PDD</h3>
        </div>
        <p>Welcome to adaptive PDD course. During this course you\'ll receive tasks depending on your answers and reactions. Let\'s look how is it work.</p>
    ]]></string>
    <string name="onboarding_card_title_2">Hard question</string>
    <string name="onboarding_card_question_2"><![CDATA[
        <p>Imagine that this card contains some hard question and you don\'t know answer. You can postpone hard question by swiping card to <b>right</b>.</p>
        <p>Try to swipe this card to <b>right</b>.</p>
        <div class="center">
            <div class="padding-box">
                <img src="file:///android_asset/web/images/arrow_right.svg" />
            </div>
        </div>
    ]]></string>
    <string name="onboarding_card_title_3">Easy question</string>
    <string name="onboarding_card_question_3"><![CDATA[
        <p>Now imagine that this card contains very easy question. You can skip it by swiping card to <b>left</b>. You\'ll <b>never</b> see it again.</p>
        <p>Try to swipe this card to <b>left</b>.</p>
        <div class="center">
            <div class="padding-box">
                <img src="file:///android_asset/web/images/arrow_left.svg" />
            </div>
        </div>
    ]]></string>
    <string name="onboarding_card_title_4">Levels &amp; exp points</string>
    <string name="onboarding_card_question_4"><![CDATA[
        <p><b>You\'ll gain exp points for correct answers.</b></p>
        <p>
            <img src="file:///android_asset/web/images/onb4str.png" />
        </p>
        <p>Streaks of correct answers increase exp points gain.</p>
        <p>You can check your stats by clicking on toolbar.</p>
    ]]></string>
    <string name="exp_title">Level <b>%d</b></string>
    <string name="exp_level_title">New level!</string>
    <string name="exp_inc" translatable="false">+%d</string>
    <string name="exp_current_progress" translatable="false">%d / %d</string>
    <string name="exp_subtitle">%d points until next level</string>
    <string name="onboarding_title">Intro</string>
    <string name="rate_app_title">Rate app</string>
    <string name="rate_app_message">How much do you like this app?</string>
    <string name="google_play" translatable="false">Google Play</string>
    <string name="feedback_positive">Thank you! Please, leave your feedback in the Google Play.</string>
    <string name="feedback_negative">Thank you! Please, send your feedback by email.</string>
    <string name="confirm">Confirm</string>
    <string name="later">Later</string>
    <string name="feedback_negative_title">Feedback for Android adaptive application</string>
    <string name="achievements">Achievements</string>
    <string name="stats_total_exp">POINTS IN TOTAL</string>
    <string name="stats_last_7_days">LAST 7 DAYS</string>
    <string name="stats_level">LEVEL</string>
    <string name="stats_exp_for_a_week">points for a week</string>
    <string name="ex_dialog_continue">Continue</string>
    <string name="tutorial">Tutorial</string>
    <string name="streak_failed">Streak lost</string>
    <string name="streak_restored">Streak restored</string>
    <string name="amount" translatable="false">x%d</string>
    <string name="use_coupon">Use coupon</string>
    <string name="streak_restore_text">You can restore your streak by using error coupon</string>
    <string name="cancel">Cancel</string>
    <string name="not_now">Not now</string>
    <string name="streak_restore_question">Use coupon?</string>
    <string name="daily_reward_title">Daily reward</string>
    <string name="daily_reward_description">Solve every day and earn rewards</string>
    <string name="daily_reward_button">Get reward</string>
    <string name="day_number">Day %d</string>
    <string name="inventory_title">Your items</string>
    <string name="local_push_yesterday">You scored %d XP yesterday. Go back and improve your score!</string>
    <string name="local_push_3days">You haven’t done it for a long time. Go back and keep learning!</string>
    <string name="local_push_streak">You have been learning %s in a row. Go back and keep learning!</string>
    <string name="local_push_title">Time to study</string>
    <string name="progress">Progress</string>
    <string name="rating">Rating</string>
    <string name="rating_you_placeholder"><b>You</b></string>
    <string name="achievement_unlocked">Achievement unlocked</string>
    <string name="achievement_tap_for_more">Tap for more</string>
    <string name="ach_progress_values" translatable="false">%d / %d</string>
    <string name="connectivity_error">No connection</string>
    <string name="content_description_item_icon" translatable="false">item icon</string>
    <string name="purchase_error">An error was occurred while processing your purchase</string>
    <string name="paid_items">Buy items</string>
    <string name="restore_purchases">Restore purchases</string>
    <string name="restoring_purchases">Restoring purchases</string>
    <string name="purchases_are_not_supported">In-app purchases are not supported on this device</string>
    <string name="paid_content_tooltip">You can buy more coupons</string>
    <string name="questions_packs">Questions packs</string>
    <string name="buy">Buy</string>
    <string name="buy_for">Buy for %s</string>
    <string name="select">Select</string>
    <string name="questions_count"><![CDATA[<b>Cards:</b> %d]]></string>
    <string name="questions_difficulty"><![CDATA[<b>Difficulty:</b> %s]]></string>
    <string name="questions_progress_description_level">Free at %d level</string>
    <string name="questions_discount_description">-%.0f%% limited offer</string>
    <string name="questions_difficulty_low">low</string>
    <string name="questions_difficulty_medium">medium</string>
    <string name="questions_difficulty_high">high</string>
    <string name="questions_difficulty_mixed">mixed</string>
    <string name="questions_tooltip">Check out new questions packs</string>
    <string name="questions_dialog">You doing great!\nMaybe it\'s time to try something more challenging?</string>
    <string name="questions_dialog_action">take a look</string>
    <string name="bookmarks_empty">No bookmarks</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="description_title" translatable="false">Up!</string>
    <string name="description_description">Levels, exp\nand free questions packs</string>
    <string name="description_levels_title">Levels</string>
    <string name="description_levels_description"><![CDATA[Earn <font color="#0092E4">EXP</font> points for every correct answer, gain <font color="#0092E4">levels</font> and unlock additional materials]]></string>
    <string name="description_levels_button">My stats</string>
    <string name="description_packs_title">Free questions packs</string>
    <string name="description_packs_description"><![CDATA[When the required <font color="#0092E4">level</font> is reached you will receive free <font color="#0092E4">questions packs</font> like Adjectives or Verbs packs]]></string>
    <string name="description_packs_button">@string/questions_packs</string>
    <string name="open_web_to_solve">Open the web version to solve</string>
    <string name="quiz_type_not_supported">Quiz type not supported</string>
    <string name="quiz_type_string_hint">Type your answer</string>
    <string name="auth_error_empty_email">Enter valid email address</string>
    <string name="auth_error_connectivity">@string/connectivity_error</string>
    <string name="auth_error_email_password_invalid">Login/password was incorrect</string>
    <string name="auth_error_too_many_attempts">Too many attempts. Please try later.</string>
    <string name="profile">Profile</string>
    <string name="profile_change_name">Change name</string>
    <string name="profile_change_email">Change email</string>
    <string name="profile_change_password">Change password</string>
    <string name="password_old">Old password</string>
    <string name="password_new">New password</string>
    <string name="empty_auth_title" translatable="false">It\'s You!</string>
    <string name="empty_auth_subtitle">Complete auth to study with comfort</string>
    <string name="empty_auth_description"><![CDATA[Authorized account allows you to <b>sync progress and purchases</b> between devices and display <b>your name in leaderboards</b>]]></string>
    <string name="notification_channel_learning_name">Learning</string>
    <string name="notification_channel_learning_description">Notifications about learning activity</string>
    <string name="course_error_enroll">An error occurred during the loading of data</string>
</resources>