<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/drawer_menu_main">
        <item
            android:title="@string/stats"
            android:id="@+id/drawer_stats"
            android:icon="@drawable/ic_stats"
            android:enabled="false"
            android:visible="true"/>
    </group>
    <group
        android:id="@+id/drawer_menu_bottom">
        <item
            android:title="@string/settings"
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings"
            android:enabled="false"
            android:visible="true"/>
        <item
            android:title="@string/logout"
            android:id="@+id/drawer_logout"
            android:icon="@drawable/ic_logout"
            android:enabled="false"
            android:visible="true" />
    </group>
</menu>