<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/message"
            android:text="@string/rate_app_message"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="?dialogPreferredPadding"
            android:paddingEnd="?dialogPreferredPadding"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/stars_container"
            android:layout_below="@id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:theme="@style/AppTheme.RatingBar"
            app:theme="@style/AppTheme.RatingBar"

            android:stepSize="1"
            android:numStars="5" />

        <TextView
            android:id="@+id/feedback_text"
            android:layout_below="@id/stars_container"
            android:text="@string/feedback_positive"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="?dialogPreferredPadding"
            android:paddingEnd="?dialogPreferredPadding"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_below="@id/feedback_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/primary_action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true">

                <Button
                    android:id="@+id/open_google_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:text="@string/google_play"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/send_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:text="@string/email"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:text="@string/confirm"
                    android:enabled="false" />
            </LinearLayout>

            <Button
                android:id="@+id/later"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/later"
                android:textColor="@color/colorSocialButton"
                android:layout_toStartOf="@id/primary_action_button"
                android:visibility="gone" />


        </RelativeLayout>
    </RelativeLayout>
</layout>
