<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/questions_packs"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/questions_dialog"
        android:textColor="@color/colorDarkGrayText" />


    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_packs"
        android:tint="@color/colorDarkGrayText" />

    <include layout="@layout/stroke" />

    <Button
        android:id="@+id/actionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/borderless_button_text_color"
        android:text="@string/questions_dialog_action" />

</LinearLayout>