<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/description_section_width"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:padding="24dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_description_levels" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/description_title_text_size"
        android:textColor="@color/colorDarkGrayText"
        android:text="@string/description_levels_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:lineSpacingMultiplier="@dimen/description_description_text_multiplier"
        android:textSize="@dimen/description_description_text_size"
        android:textColor="@color/colorDarkGrayText"
        android:text="@string/description_levels_description" />

    <Button
        android:id="@+id/statsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_levels_button"
        android:layout_marginTop="8dp"
        android:theme="@style/AppTheme.WhiteButton"
        android:textColor="@color/colorDarkGrayText" />

</LinearLayout>