<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?dialogPreferredPadding"
        android:layout_marginStart="?dialogPreferredPadding"
        android:layout_marginEnd="?dialogPreferredPadding"
        android:text="@string/profile_change_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

    <FrameLayout
        android:id="@+id/container"
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_margin="?dialogPreferredPadding" />

        <LinearLayout
            android:id="@+id/profileForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="?dialogPreferredPadding">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/oldPasswordWrapper"
                    android:layout_width="match_parent"
                    app:passwordToggleDrawable="@drawable/password_toggle"
                    app:passwordToggleEnabled="true"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/oldPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/password_old" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/newPasswordWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleDrawable="@drawable/password_toggle"
                    app:passwordToggleEnabled="true"
                    android:layout_marginTop="8dp">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/newPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/password_new" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <Button
                    android:id="@+id/confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:text="@string/confirm"
                    android:layout_alignParentEnd="true"
                    android:enabled="false" />

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:text="@string/cancel"
                    android:layout_toStartOf="@id/confirm" />

            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>
