<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/header_empty_auth" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/buttonsGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signIn"
        android:text="@string/sign_in"
        android:background="@drawable/placeholder_button_background_selector"
        android:textColor="@android:color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toTopOf="@+id/signLater"
        app:layout_constraintEnd_toStartOf="@+id/buttonsGuideline"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUp"
        android:text="@string/sign_up"
        android:background="@drawable/placeholder_button_background_selector"
        android:textColor="@android:color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/signLater"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonsGuideline" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signLater"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/sign_later"
        android:textColor="@color/colorSemiTransparentWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>